--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]  
 name = "vllm_qwen3_next_plugin"  
 version = "0.1"  
-description = "vLLM Qwen3Next model plugin with custom support."
+description = "vLLM Qwen3Next model plugin with custom support (includes MTP support for v0.11.0)."
 dependencies = [
     "vllm>=0.10.2,<=0.11.0"
 ]
