--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"  
   
 [project]  
-name = "vllm_qwen3_next_plugin"  
+name = "vllm_yulan_hybrid_plugin"  
 version = "0.1"  
-description = "vLLM Qwen3Next model plugin with custom support (includes MTP support for v0.11.0)."
+description = "vLLM YuLanHybrid model plugin with custom support (includes MTP support for v0.11.0)."
 dependencies = [
     "vllm>=0.10.2,<=0.11.0"
 ]
   
 [project.entry-points."vllm.general_plugins"]  
-register_qwen3_next_model = "vllm_qwen3_next_plugin:register"  
+register_yulan_hybrid_model = "vllm_yulan_hybrid_plugin:register"  
   
 [tool.setuptools.packages.find]  
 where = ["."]
